--- a/apps/common/vpa-targets/app.yaml
+++ b/apps/common/vpa-targets/app.yaml
@@ -2,4 +2,4 @@ chart: vpa-targets
 targetRevision: 0.1.12
 enabled: 'true'
 repoURL: 'https://art-toucan.autodesk.com:443/artifactory/k8s-core-caas-helm/'
-namespace: vpa
+namespace: ''
